--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -1,63 +1,92 @@
-@import '../../style/variables.scss';
+@import "../../style/variables.scss";
 
 .randomchar {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-	 align-items: center;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
-    &__block {
-        padding: 40px 35px;
-        display: grid;
-        grid-template-columns: 180px auto;
-        column-gap: 30px;
+  display: flex;
+  // grid-template-columns: repeat(2, 50%);
+  // align-items: center;
+  justify-content: space-between;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
+  &__block {
+    flex: 0 0 60%;
+    padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    @media (max-width: 800px) {
+      min-width: 260px;
     }
-    &__img {
-        width: 180px;
-        height: 180px;
-        object-fit: cover;
-    }
-    &__info {
-        display: grid;
-        grid-template-rows: minmax(29px, auto) 90px 38px;
-        row-gap: 10px;
-        padding-top: 3px;
-    }
-    &__name {
+    // display: grid;
+    // grid-template-columns: 180px auto;
+    // column-gap: 30px;
+  }
+  &__img {
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+  }
+  &__info {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+  }
+  &__name {
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 29px;
+    text-transform: uppercase;
+  }
+  &__descr {
+    font-size: 14px;
+    line-height: 18px;
+  }
+  &__btns {
+    a {
+      &:hover {
         font-weight: bold;
-        font-size: 22px;
-        line-height: 29px;
-        text-transform: uppercase;
+      }
     }
-    &__descr {
-        font-size: 14px;
-        line-height: 18px;
+  }
+  &__static {
+    flex: 0 0 40%;
+    padding: 40px 35px;
+    background-color: $dark;
+    position: relative;
+    @media (max-width: 800px) {
+      padding: 20px 35px;
     }
-    &__btns {
-        a:nth-child(1) {
-            margin-right: 30px;
-        }
+    button {
+      margin-top: 13px;
     }
-    &__static {
-        padding: 40px 35px;
-        background-color: $dark;
-        position: relative;
-        button {
-            margin-top: 13px;
-        }
+  }
+  &__title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.045em;
+    color: #ffffff;
+    &:nth-child(2) {
+      margin-top: 33px;
     }
-    &__title {
-        font-weight: bold;
-        font-size: 24px;
-        line-height: 32px;
-        letter-spacing: -0.045em;
-        color: #FFFFFF;
-        &:nth-child(2) {
-            margin-top: 33px;
-        }
+
+    @media (max-width: 800px) {
+      &:nth-child(2) {
+        margin-top: 0px;
+      }
+      &:nth-child(1) {
+        display: none;
+      }
     }
-    &__decoration {
-        position: absolute;
-        bottom: 14px;
-        right: -37px;
+  }
+  &__decoration {
+    position: absolute;
+    bottom: 14px;
+    right: -37px;
+    width: 40%;
+    @media (max-width: 1000px) {
+      display: none;
     }
+  }
 }
